# signal-fish-server

./: .gitignore  .lychee.toml  .lycheecache  .markdownlint.json  .markdownlintignore  .typos.toml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  clippy.toml  config.example.json  deny.toml  docker-compose.yml  mkdocs.yml  requirements-docs.txt  tarpaulin.toml
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: extract-rust-blocks.awk
.github/test-fixtures/: .index  README.md  TESTING.md  extract-rust-blocks.py  markdown-validation-test-cases.md  simple-test.sh  test-markdown-validation.sh  validate-test-cases.sh
.github/workflows/: actionlint.yml  ci-safety.yml  ci.yml  doc-validation.yml  docs-deploy.yml  link-check.yml  markdownlint.yml  release.yml  spellcheck.yml  unused-deps.yml  workflow-hygiene.yml  yaml-lint.yml
.llm/: context.md
.llm/skills/: agent-self-review-checklist.md  agentic-workflow-patterns.md  api-design-guidelines.md  async-rust-best-practices.md  awk-and-shell-scripting.md  ci-cd-troubleshooting.md  clippy-and-linting.md  code-review-checklist.md  container-and-deployment.md  ddos-and-rate-limiting.md  defensive-programming.md  dependency-management.md  documentation-standards.md  error-handling-guide.md  git-hooks-setup.md  git-safety-protocol.md  github-actions-best-practices.md  graceful-degradation.md  manage-skills.md  mandatory-workflow.md  markdown-best-practices.md  msrv-and-toolchain-management.md  observability-and-logging.md  rust-idioms-and-patterns.md  rust-performance-optimization.md  rust-refactoring-guide.md  solid-principles-enforcement.md  supply-chain-security.md  test-fixture-patterns.md  testing-strategies.md  testing-tools-and-frameworks.md  web-service-security.md  websocket-protocol-patterns.md  websocket-session-security.md
benches/: response_time_tracker.rs
docs/: README.md  architecture.md  authentication.md  ci-cd-testing-summary.md  ci-cd-testing.md  configuration.md  deployment.md  development.md  features.md  getting-started.md  git-hooks-guide.md  hooks-quick-reference.md  index.md  library-usage.md  pre-commit-hooks-summary.md  protocol.md  quickstart.md  test-consolidation-examples.md  test-consolidation-quick-reference.md  test-suite-analysis-ci-config.md  test-suite-recommendations-summary.md
docs/adr/: README.md  ci-cd-preventative-measures.md  msrv-consistency-enforcement.md  reconnection-protocol.md
scripts/: build-docker.sh  check-ci-config.sh  check-links-fast.sh  check-markdown.sh  check-msrv-consistency.sh  check-no-panics.sh  check-workflow-hygiene.sh  enable-hooks.sh  run-local-ci.sh  run-server.sh  test.sh  upgrade-deps.sh  validate-ci.sh  validate-lychee-config.sh  validate-workflow-awk.sh
src/: broadcast.rs  distributed.rs  lib.rs  logging.rs  main.rs  metrics.rs  rate_limit.rs  reconnection.rs  retry.rs  rkyv_utils.rs  server.rs
tests/: auth_integration_tests.rs  ci_config_tests.rs  concurrency_tests.rs  config_and_endpoints_tests.rs  e2e_tests.rs  integration_tests.rs  load_tests.rs  lobby_e2e_tests.rs  lobby_integration_tests.rs  performance_tests.rs  test_helpers.rs  thread_safety_tests.rs
(+75 files in other folders)
