[package]
name = "signal-fish-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ambiguous Interactive"]
description = "A lightweight, in-memory WebSocket signaling server for peer-to-peer game networking"
repository = "https://github.com/Ambiguous-Interactive/signal-fish-server"
keywords = ["gamedev", "signaling", "websocket", "multiplayer", "matchmaking"]
categories = [
    "game-engines",
    "network-programming",
    "web-programming::websocket",
]
rust-version = "1.88.0"

[features]
default = []
legacy-fullmesh = ["matchbox_signaling"]
tls = ["axum-server", "rustls", "rustls-pemfile", "rustls-pki-types"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.3"
rkyv = { version = "0.8", default-features = true, features = [
    "bytes-1",
    "uuid-1",
    "smallvec-1",
] }

# Identifiers & time
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"

# Error handling & logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
    "json",
    "time",
    "std",
    "ansi",
    "tracing-log",
] }
tracing-appender = "0.2"

# Async utilities
async-trait = "0.1"
futures-util = { version = "0.3", features = ["std"] }

# Performance primitives
bytes = "1.11"
smallvec = { version = "1.15", features = ["union", "const_generics", "serde"] }
dashmap = "6.1"

# Crypto & security
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.4"
subtle = "2.6"

# Data structures
lru = "0.16"
hdrhistogram = "7.5"
rand = "0.10"
fastrand = "2.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Optional: legacy full-mesh mode
matchbox_signaling = { version = "0.14", optional = true }

# Optional: TLS support
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", default-features = true, optional = true }
rustls-pemfile = { version = "2.2", optional = true }
rustls-pki-types = { version = "1.14", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.25"
tokio-tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
serial_test = "3.3"
axum-test = "18.7"
proptest = "1.10"
once_cell = "1.21"
criterion = "0.8"

[[bin]]
name = "signal-fish-server"
path = "src/main.rs"

[lib]
name = "signal_fish_server"
path = "src/lib.rs"

[[bench]]
name = "response_time_tracker"
harness = false

[patch.crates-io]
rmp = { path = "third_party/rmp" }

[profile.dev]
debug = 1

[profile.dev.package."*"]
debug = 0

[profile.ci]
inherits = "dev"
debug = 0
incremental = false
lto = false

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
